Warning temizlği - Kalan warningler bilinclı bırakıldı (SDK kodları, string resource, null safety)